--- a/Main.qmd
+++ b/Main.qmd
@@ -65,7 +65,7 @@ Warming, nitrogen addition and reduced grazing occur simultaneously, they intera
 #| label: fig-concept
 #| echo: false
 #| warning: false
-#| fig-cap: Conceptual figures of global change impact on alpine plant communities and experimental design. a) Climate warming, atmospheric nitrogen deposition and grazing impact plant diversity through the same mechanism (productivity and standing biomass). The plus and minus signs define the relationship between the drivers and mechanisms and the rack-wheel indicates a positive feedback between diversity and biomass. b) Hump-shaped relationship between standing biomass and diversity. The arrows indicate the direction in which the different global change drivers affect standing biomass. c) The effect of intermediate grazing on diversity in relation to warming or nitrogen addition. Positive values show an increase and negative values a decrease in diversity. The grey line shows the expected relationship, the dashed line is zero and the dashed arrows indicate if grazing decreases or increases diversity, depending on faciliation loss or competition release. The grey square in panel b and c shows where grazing can be benefitial for diversity due to competitive release. d) Experimental design at an alpine and sub-alpine site. The lowland site lowland site has only transplanted communities (= warming treatment). The treatments are ambient (grey), warming (pink), nitrogen deposition (shades of grey to brown or pink to brown), crossed with four levels og simulated grazing; none (empty), intermediate (one scissor), intensive (two scissors) and natural grazing outside the grazing exclosure (dashed line). The arrows indicate the direction of transplant and the faded plots indicate the origin of transplant. Inset shows map of studies site in Western Norway.
+#| fig-cap: Conceptual figures of global change impact on alpine plant communities and experimental design. a) Climate warming, atmospheric nitrogen deposition and grazing impact plant diversity through the same mechanism (productivity and standing biomass). The plus and minus signs define the relationship between the drivers and mechanisms and the rack-wheel indicates a positive feedback between diversity and biomass. b) Hump-shaped relationship between standing biomass and diversity. The arrows indicate the direction in which the different global change drivers affect standing biomass. c) The effect of intermediate grazing on diversity in relation to warming or nitrogen addition. Positive values show an increase and negative values a decrease in diversity. The gray line shows the expected relationship, the dashed line is zero and the dashed arrows indicate if grazing decreases or increases diversity, depending on faciliation loss or competition release. The gray square in panel b and c shows where grazing can be benefitial for diversity due to competitive release. d) Experimental design at an alpine and sub-alpine site. The lowland site lowland site has only transplanted communities (= warming treatment). The treatments are ambient (gray), warming (pink), nitrogen deposition (shades of gray to brown or pink to brown), crossed with four levels og simulated grazing; none (empty), intermediate (one scissor), intensive (two scissors) and natural grazing outside the grazing exclosure (dashed line). The arrows indicate the direction of transplant and the faded plots indicate the origin of transplant. Inset shows map of studies site in Western Norway.
 
 knitr::include_graphics("figures/concept.jpg")
 
@@ -76,14 +76,14 @@ Warmer climate and nitrogen deposition both positively affect plant productivity
 The relationship between standing biomass and plant diversity is non-linear and generally highest at low to intermediate biomass (@fig-concept b).
 Colder and nutrient-poor grasslands, characterised by facilitative species interactions [@bertness1994positive; @choler2001facilitation], often support low-productiv plant communities with little standing biomass, but are relatively species rich (peak in @fig-concept b)[@milchunas1993quantitative; @grime1973competitive].
 In contrast, warmer and productive grasslands have more standing biomass and usually favour few dominant and more competitive species, leading to a decrease in diversity (right side in @fig-concept b)[@grime1973competitive].
-Warming and nitrogen addition can increase diversity in a cold and low productive grassland, however in more productive systems, they often lead to diversity loss (grey area in @fig-concept b) [@Humbert2016-wg; @steinbauer2018accelerated].
+Warming and nitrogen addition can increase diversity in a cold and low productive grassland, however in more productive systems, they often lead to diversity loss (gray area in @fig-concept b) [@Humbert2016-wg; @steinbauer2018accelerated].
 Combined effects of warming and nitrogen addition decrease diversity and are often additive [@yue2020changes; @Klanderud2005-yx].
 
 Grazers impact plant communities through the same mechanisms, but in a more complex way.
 They remove biomass and can stimulate plant productivity via nutrient addition such as urin and/or dung (@fig-concept a).
 <!-- Plants can compensate the loss of biomass with compensatory growth if grazing intensity is moderate (McNaughton 1983). --> The net effect of grazing on plant diversity can thus be positive or negative and depends on grazing intensity, grazing history, and environmental context (e.g. moisture, temperature and/or nutrients) [@milchunas1988generalized; @milchunas1993quantitative; @cingolani2005grazing].
 In low productive systems where facilitative interactions are common, grazing will likely have a negative impact on diversity.
-However, in slightly more productive systems, the removal of biomass can release competition and increase diversity (grey area in @fig-concept b and c) [@Austrheim2001-nu; @Bernes2015-yg; @niedrist2009plant].
+However, in slightly more productive systems, the removal of biomass can release competition and increase diversity (gray area in @fig-concept b and c) [@Austrheim2001-nu; @Bernes2015-yg; @niedrist2009plant].
 Grazing is often managed locally and at short time scales and is thus suitable as an ecosystem management tool.
 Because grazing acts via the same pathways, it has the potential to mitigate the negative impacts of warming and nitrogen addition on alpine diversity.
 There are numerous global change studies in alpine grasslands, but surprisingly few studies have manipulated multiple global change drivers [but see @Zhu2015-jw].
@@ -135,7 +135,7 @@ Nitrogen addition and grazing had no effect on graminoid and forb cover and none
 #| label: fig-prod-cover
 #| echo: false
 #| warning: false
-#| fig-cap: Global change impacts on productivity and functional group cover. a) Annual productivity (g m^-2^ y^-1^) and b) change in graminoid excluding sedges, forb, sedge or legume cover between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) sites. For cover, positive numbers indicate an increase and negative numbers a decrease in functional group cover. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpreation of the data. The colours indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms, and letters in grey show marginal significant terms. Note that sedge and legumes only occured in high enough abundance at one of the locations to run a model.
+#| fig-cap: Global change impacts on productivity and functional group cover. a) Annual productivity (g m^-2^ y^-1^) and b) change in graminoid excluding sedges, forb, sedge or legume cover between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha^-1^ y^-1^) in the alpine (upper row) and sub-alpine (lower row) sites. For cover, positive numbers indicate an increase and negative numbers a decrease in functional group cover. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpretation of the data. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms, and letters in gray show marginal significant terms. Note that sedge and legumes only occured in high enough abundance at one of the locations to run a model.
 
 tar_load(prod_cover_figure)
 prod_cover_figure
@@ -144,6 +144,7 @@ prod_cover_figure
 ```{r}
 #| label: tbl-prod
 #| echo: false
+#| eval: false
 #| tbl-cap: Results from linear regression of the effects of warming, grazing and nitrogen addition on annual plant productivity at the alpine and sub-alpine site. Shown are estimates ± standard error, t statistics and P value.
 
 tar_load(productivity_stats)
@@ -176,6 +177,7 @@ productivity_stats |>
 ```{r}
 #| label: tbl-cover
 #| echo: false
+#| eval: false
 #| tbl-cap: Results from linear regression of the effects of warming, grazing and nitrogen addition on graminoid, forb and sedge cover at the alpine site. Shown are estimates ± standard error, t statistics and P value. Other refer to sedges in the alpine and legumes in the sub-alpine site. Note that NAs indicate that the results are from the logarithmic model and the term N² does not exist.
 
 tar_load(cover_stats)
@@ -243,7 +245,7 @@ Overall, the three drivers affected diversity and evenness similarly in alpine c
 #| echo: false
 #| eval: false
 #| warning: false
-#| fig-cap: Global change impact on diversity indices. Change in species richness, diversity and evenness between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) sites. Positive numbers indicate an increase and negative numbers a decrease in the diversity index. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpreation of the data. The colours indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms, and letters in grey show marginal significant terms.
+#| fig-cap: Global change impact on diversity indices. Change in species richness, diversity and evenness between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) sites. Positive numbers indicate an increase and negative numbers a decrease in the diversity index. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpretation of the data. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms, and letters in gray show marginal significant terms.
 
 tar_load(diversity_figure)
 diversity_figure
@@ -253,7 +255,7 @@ diversity_figure
 ```{r}
 #| label: fig-diversity
 #| echo: false
-#| fig-cap: Global change impact on diversity indices. Change in species richness, diversity and evenness between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) sites. Positive numbers indicate an increase and negative numbers a decrease in the diversity index. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpreation of the data. The colours indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms, and letters in grey show marginal significant terms. The lines on top of the panels indicate that the calculation of richness is based on species numbers, evenness on specis abundance and diversity is based on a combination of both. 
+#| fig-cap: Global change impact on diversity indices. Change in species richness, diversity and evenness between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) sites. Positive numbers indicate an increase and negative numbers a decrease in the diversity index. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpretation of the data. The colors indicate ambient (gray) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms, and letters in gray show marginal significant terms. The lines on top of the panels indicate that the calculation of richness is based on species numbers, evenness on specis abundance and diversity is based on a combination of both. 
 
 knitr::include_graphics("fig-diversity-1.png")
 
@@ -262,6 +264,7 @@ knitr::include_graphics("fig-diversity-1.png")
 ```{r}
 #| label: tbl-div
 #| echo: false
+#| eval: false
 #| tbl-cap: Results from linear regression of the effects of warming, grazing and nitrogen addition on change in diversity at the sub-alpine site. Shown are estimates ± standard error, t statistics and P value. Note that NAs indicate that the results are from the linear or logarithmic model and the term N² does not exist.
 
 tar_load(diversity_stats)
@@ -327,7 +330,7 @@ One explanation for this could be that the conditions at the lowest site were dr
 
 <!-- What causes these changes? -->
 Change in productivity can also result from changes in species composition.
-We found that especially with warming the abundance of graminoids increased, which has been found previously [@Elmendorf2012plot].
+We found that especially with warming the abundance of graminoids increased, which has been found previously [@elmendorf2012plot].
 Graminoids are often fast growing and more competitive.
 <!-- A bit unsure what I should say about forbs. non significant trend, but they decrease in the alpine -->
 Unlike other studies, we found no change in the abundance of other functional groups such as forbs, legumes or sedges.
@@ -350,7 +353,7 @@ Interestingly, these plant communities tended to change in productivity and dive
 Moderate grazing has been shown to increase species richness and diversity in alpine grasslands [@Austrheim2001-nu; @Bernes2015-yg; @niedrist2009plant; @klein2004experimental].
 This is because grazing induces competitive release in plant communities due to a shift from dominant to less competitive and rare species.
 Net effects of grazing on plant community composition are however complex and depend on a number of factors including grazing intensity, grazing history, and environmental context (i.e. productivity) [@milchunas1988generalized; @milchunas1993quantitative; @cingolani2005grazing].
-In our study, the relationship between productivity and diversity was negatively correlated (@fig-summary a), suggesting that moderate grazing could remove biomass and thus increase diversity (grey area in @fig-concept b and c).
+In our study, the relationship between productivity and diversity was negatively correlated (@fig-summary a), suggesting that moderate grazing could remove biomass and thus increase diversity (gray area in @fig-concept b and c).
 Indeed, we found that simulated grazing prevents the loss of diversity and evenness at the alpine site with warming and nitrogen levels above 10 kg N ha^-1^ y^-1^ (@fig-diversity, @fig-summary b).
 Grazing was only beneficial for diversity with the intensive grazing treatment, suggesting that the medium grazing treatment was too low.
 
@@ -359,7 +362,7 @@ Grazing was only beneficial for diversity with the intensive grazing treatment, 
 #| label: fig-summary
 #| echo: false
 #| fig-height: 10
-#| fig-cap: Summarizing main results. a) The relationship between productivity and diversity from all plots in 2022. The points are the raw data and the line is the regression line from a linear model with confidence intervall. b) Effect of grazing on diversity (diversity with grazing - diversity in control plots) with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) site. Positive numbers indicate an increase and negative numbers a decrease in the diversity. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpreation of the data. The colours indicate ambient (grey) and warm conditions (pink) and the linetypes show the different grazing treatments (dashed = medium, dotted = intensive grazing). The lines indicate the regressionline from a linear model with confidence intervals. c) Adjusted R squared from the model with a 3-way interaction of the three global change drivers and a model with only single effects of the same drivers.
+#| fig-cap: Summarizing main results. a) The relationship between productivity and diversity from all plots in 2022. The points are the raw data and the line is the regression line from a linear model with confidence intervall. b) Effect of grazing on diversity (diversity with grazing - diversity in control plots) with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) site. Positive numbers indicate an increase and negative numbers a decrease in the diversity. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpretation of the data. The colors indicate ambient (gray) and warm conditions (pink) and the linetypes show the different grazing treatments (dashed = medium, dotted = intensive grazing). The lines indicate the regressionline from a linear model with confidence intervals. c) Adjusted R squared from the model with a 3-way interaction of the three global change drivers and a model with only single effects of the same drivers.
 
 tar_load(summary_figure)
 summary_figure
@@ -448,7 +451,8 @@ There is no estimate of annual productivity for the natural grazed plots, becaus
 <!-- Do we want to say this and present productivity at the 3 sties? -->
 
 To estimate productivity and grazing intensity outside the grazing exclosure at each site, we set up three 30 x 30 cm cages and control plots at each site.
-The cages were designed to exclude mammal herbivores, but not insects (mesh with = 1 cm?).
+<!-- Check mesh size -->
+The cages were designed to exclude mammal herbivores, but not insects (mesh with 1 cm).
 The plots were moved every x-y days, and the biomass in each plot was harvested 2-3 cm above the ground, dried at 65°C for 72h and weighed.
 
 Plant species composition was recorded annually at peak growing season in all plots before the treatment in 2019 and after 3 years in 2022.
@@ -483,299 +487,4 @@ All data underlying these analyses (including raw and processed data) are openly
 All R code for downloading the data from the repository, and (hopefully) reproducing data transformation, analyses and producing this manuscript are available on GitHub (the final version will be versioned on Zenodo).
 <!-- Instructions for how to replicate the analysis are described in the readme file on Github. -->
 
-## References
 
-The references will be moved here, but they are at the end of the document for now.
-
-## Supplementary Information
-
-### Global change effects on the microclimate
-
-```{r}
-#| label: fig-daily-climate
-#| echo: false
-#| warning: false
-#| fig-cap: a) Daily microclimate values, measured over the period of the experiment in the alpine and sub-alpine sites and b) average summer microclimate between May and September. Shown are air (30 cm), ground (0 cm), soil temperature (-5 cm), and soil moisture measured with Tomst loggers between August 2019 and October 2022. Colour indicates the ambient (grey) and warming (pink) treatment. Air, ground and soil temperature were higher and soil moisture was lower in the warming treatment, indicated by the star.
-
-
-tar_load(daily_climate_figure)
-daily_climate_figure
-
-```
-
-```{r}
-
-#| label: climate-test
-#| echo: false
-
-tar_load(daily_temp)
-
-warming <- daily_temp |>
-    mutate(month = month(date),
-           year = year(date)) |>
-    filter(month %in% c(5, 6, 7, 8, 9),
-           grazing == "Control",
-           Namount_kg_ha_y == 0)
-
-test_warming <- warming |> 
-  group_by(origSiteID, variable) |> 
-  nest() |> 
-  mutate(linMod = map(data, ~lm(value ~ warming, data = .)),
-         result = map(linMod, tidy)) |> 
-  unnest(result) |> 
-  select(-data, -linMod) |> 
-  mutate(estimate = round(estimate, 2),
-         std.error = round(std.error, 2),
-         statistic = round(statistic, 2),
-         p.value = round(p.value, 3))
-
-
-```
-
-<!-- 2021 was the warmest and driest year with an average air temperature of 10.18 °C and 0.25 % soil moisture content. -->
-
-<!-- 2019 was the coldest and wettest year with an average air temperature of 6.18 °C and 0.4 % soil moisture content (Supplement Figure S1). -->
-
-```{r}
-#| label: fig-climate
-#| echo: false
-#| warning: false
-#| fig-cap: Global change impact on microclimate. Average summer (June - Spetember) air, ground soil temperture and soil moisture over between 2019 and 2022 with increasing nitrogen addition (kg N ha^-1^ y^-1^) at the alpine (upper row) and sub-alpine (lower row) sites. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpreation of the data. The colours indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = medium, triangle = intensive grazing). The points show the data, while the lines indicate model predictions with confidence intervals. Letters indicate significant model terms.
-
-tar_load(climate_figure)
-climate_figure
-```
-
-
-```{r}
-#| label: tbl-climate
-#| echo: false
-#| tbl-cap: Results from linear regression of the effects of warming, grazing and nitrogen addition on microclimate (air, ground, soil temperature and soilmoisture) at the alpine and sub-alpine site. Shown are estimates ± standard error, t statistics and P value.
-
-tar_load(climate_stats)
-
-dat <- climate_stats |> 
-  mutate(estimate = round(estimate, 2),
-         std.error = round(std.error, 2),
-         statistic = round(statistic, 2),
-         p.value = round(p.value, 3),
-         estimate = paste(estimate, "±", std.error, sep = " ")) |> 
-  select(-names, -std.error) |> 
-  pivot_wider(names_from = variable, values_from = c(estimate, statistic, p.value)) |>
-  mutate(term = factor(term, levels = c("Intercept", "W", "G", "N", "N²", "WxG", "WxN", "WxN²", "GxN", "GxN²", "WxGxN", "WxGxN²"))) |>
-  arrange(origSiteID, term) |> 
-  select(origSiteID, Term = term, estimate_air, statistic_air, p.value_air, estimate_ground, statistic_ground, p.value_ground, estimate_soil, statistic_soil, p.value_soil, estimate_soilmoisture, statistic_soilmoisture, p.value_soilmoisture)
-
-dat |> 
-  gt() |> 
-  tab_spanner(label = "Air", columns = c(2:4)) |> 
-  cols_label(estimate_air = "Estimate ± SE",
-             statistic_air = "t",
-             p.value_air	= "P") |> 
-  tab_spanner(label = "Ground", columns = c(5:7)) |> 
-  cols_label(estimate_ground = "Estimate ± SE",
-             statistic_ground = "t",
-             p.value_ground	= "P") |> 
-  tab_spanner(label = "Soil", columns = c(8:10)) |> 
-  cols_label(estimate_soil = "Estimate ± SE",
-             statistic_soil = "t",
-             p.value_soil	= "P") |> 
-  tab_spanner(label = "Soilmoisture", columns = c(11:13)) |> 
-  cols_label(estimate_soilmoisture = "Estimate ± SE",
-             statistic_soilmoisture = "t",
-             p.value_soilmoisture	= "P") |>
-  tab_row_group(
-    label = "Sub-alpine",
-    rows = 9:16
-  ) |> 
-  tab_row_group(
-    label = "Alpine",
-    rows = 1:8
-  ) |> 
-  tab_options(
-  table.font.size = 12,
-  data_row.padding = gt::px(1)
-  )
-
-```
-
-<!-- remove? -->
-```{r}
-
-#| label: grazing-N-test
-#| echo: false
-
-grazing <- daily_temp |>
-    mutate(month = month(date),
-           year = year(date)) |>
-    filter(month %in% c(5, 6, 7, 8, 9),
-           warming == "Ambient",
-           Namount_kg_ha_y == 0)
-
-test_N <- grazing |> 
-  group_by(origSiteID, variable) |> 
-  nest() |> 
-  mutate(linMod = map(data, ~lm(value ~ grazing, data = .)),
-         result = map(linMod, tidy)) |> 
-  unnest(result) |> 
-  select(-data, -linMod) |> 
-  mutate(estimate = round(estimate, 2),
-         std.error = round(std.error, 2),
-         statistic = round(statistic, 2),
-         p.value = round(p.value, 3))
-
-nitrogen <- daily_temp |>
-    mutate(month = month(date),
-           year = year(date)) |>
-    filter(month %in% c(5, 6, 7, 8, 9),
-           warming == "Ambient",
-           grazing == "Control")
-
-test_N <- nitrogen |> 
-  group_by(origSiteID, variable) |> 
-  nest() |> 
-  mutate(linMod = map(data, ~lm(value ~ Namount_kg_ha_y, data = .)),
-         result = map(linMod, tidy)) |> 
-  unnest(result) |> 
-  select(-data, -linMod) |> 
-  mutate(estimate = round(estimate, 2),
-         std.error = round(std.error, 2),
-         statistic = round(statistic, 2),
-         p.value = round(p.value, 3))
-
-
-```
-
-### Functional group composition
-
-```{r}
-#| label: fig-biomass-fg
-#| echo: false
-#| warning: false
-#| fig-height: 5
-#| fig-cap: Proportion of biomass per plant functional group at peak growing season in 2022. Shown are the proportion of shrubs, graminoids (without Cyperaceae), Cyperaceae (mostly Carex species), forbs, legumes, bryophytes, and litter, for the different nitrogen addition treatments in non-grazed (Control), medium and intensive grazed plots. The two top rows are the ambient and warmed plots in the alpine site, while the two lower rows are ambient and warmed plots at the subalpine site. The general pattern is that graminoids increase and forbs decrease with higher nitrogen addition treatment.
-
-tar_load(biomass_fun_group)
-biomass_fun_group
-
-```
-
-### Functional group cover and natural grazing
-
-```{r}
-#| label: fig-cover-CN
-#| echo: false
-#| warning: false
-#| fig-cap: Change in functional group cover. The figure shows change in graminoid excluding sedges, forb, sedge or legume cover between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha-1 y-1) in the alpine (upper row) and sub-alpine (lower row) sites. Positive numbers indicate an increase and negative numbers a decrease in functional group cover. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpreation of the data. The colours indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = natural grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms, and letters in grey show marginal significant terms. Note that sedge and legumes only occured in high enough abundance at one of the locations to run a model.
-
-tar_load(cover_CN_figure)
-cover_CN_figure
-
-```
-
-
-```{r}
-#| label: tbl-cover-CN
-#| echo: false
-#| tbl-cap: Results from linear regression of the effects of warming, grazing and nitrogen addition on graminoid, forb, sedge and legume cover at the alpine and sub-alpine site. Shown are estimates ± standard error, t statistics and P value. Other refer to sedges in the alpine and legumes in the sub-alpine site. Note that NAs indicate that the results are from the logarithmic model and the term N² does not exist.
-
-tar_load(cover_CN_stats)
-
-dat <- cover_CN_stats |> 
-  mutate(estimate = round(estimate, 2),
-         std.error = round(std.error, 2),
-         statistic = round(statistic, 2),
-         p.value = round(p.value, 3),
-         estimate = paste(estimate, "±", std.error, sep = " "),
-         functional_group = if_else(functional_group %in% c("sedge", "legume"), "other", functional_group)) |> 
-  select(-names, -std.error) |> 
-  pivot_wider(names_from = functional_group, values_from = c(estimate, statistic, p.value)) |>
-  mutate(term = factor(term, levels = c("Intercept", "W", "G", "N", "N²", "WxG", "WxN", "WxN²", "GxN", "GxN²", "WxGxN", "WxGxN²"))) |>
-  arrange(origSiteID, term) |> 
-  select(Term = term, estimate_graminoid, statistic_graminoid, p.value_graminoid, estimate_forb, statistic_forb, p.value_forb, estimate_other, statistic_other, p.value_other)
-
-dat |> 
-  gt() |> 
-  tab_spanner(label = "Graminoid", columns = c(2:4)) |> 
-  cols_label(estimate_graminoid = "Estimate ± SE",
-             statistic_graminoid = "t",
-             p.value_graminoid	= "P") |> 
-  tab_spanner(label = "Forb", columns = c(5:7)) |> 
-  cols_label(estimate_forb = "Estimate ± SE",
-             statistic_forb = "t",
-             p.value_forb	= "P") |> 
-  tab_spanner(label = "Other", columns = c(8:10)) |> 
-  cols_label(estimate_other = "Estimate ± SE",
-             statistic_other = "t",
-             p.value_other	= "P") |> 
-  tab_row_group(
-    label = "Sub-alpine",
-    rows = 13:20
-  ) |> 
-  tab_row_group(
-    label = "Alpine",
-    rows = 1:12
-  ) |> 
-  tab_options(
-  table.font.size = 12,
-  data_row.padding = gt::px(1)
-  )
-
-```
-
-
-```{r}
-#| label: fig-diversity-CN
-#| echo: false
-#| warning: false
-#| fig-cap: Change in functional group cover. Change in diversity indices (richness, diversity and evenness) between 2019 (before treatment) and 2022 (after three years of treatment) with increasing nitrogen addition (kg N ha-1 y-1) in the alpine (upper row) and sub-alpine (lower row) sites. Positive numbers indicate an increase and negative numbers a decrease in the diversity index. The x axis is log transformed to better visualize lower nitrogen values, but the numbers on the x axis are on the original scale for better interpreation of the data. The colours indicate ambient (grey) and warm conditions (pink) and the shapes show the different grazing treatments (round = control, square = natural grazing). The points show the data, while the lines indicate model predictions with confidence intervals. The letters in black indicate significant model terms, and letters in grey show marginal significant terms.
-
-tar_load(diversity_CN_figure)
-diversity_CN_figure
-
-```
-
-
-```{r}
-#| label: tbl-div-CN
-#| echo: false
-#| tbl-cap: Results from linear regression of the effects of warming, grazing and nitrogen addition on change in diversity at the alpine and sub-alpine site. Shown are estimates ± standard error, t statistics and P value. Note that NAs indicate that the results are from the linear or logarithmic model and the term N² does not exist.
-
-tar_load(diversity_CN_stats)
-
-div <- diversity_CN_stats |>
-  mutate(estimate = round(estimate, 2),
-         std.error = round(std.error, 2),
-         statistic = round(statistic, 2),
-         p.value = round(p.value, 3),
-         estimate = paste(estimate, "±", std.error, sep = " ")) |> 
-  select(-names, -std.error) |> 
-  pivot_wider(names_from = diversity_index, values_from = c(estimate, statistic, p.value)) |> 
-  select(Term = term, estimate_richness, statistic_richness, p.value_richness, estimate_diversity, statistic_diversity, p.value_diversity, `estimate_evenness`, `statistic_evenness`, `p.value_evenness`)
-
-div |> 
-  gt() |> 
-  tab_spanner(label = "Richness", columns = c(2:4)) |> 
-  cols_label(estimate_richness = "Estimate ± SE",
-             statistic_richness = "t",
-             p.value_richness	= "P") |> 
-  tab_spanner(label = "Diversity", columns = c(5:7)) |> 
-  cols_label(`estimate_diversity` = "Estimate ± SE",
-             `statistic_diversity` = "t",
-             `p.value_diversity`	= "P") |> 
-    tab_spanner(label = "Evenness", columns = c(8:10)) |> 
-  cols_label(`estimate_evenness` = "Estimate ± SE",
-             `statistic_evenness` = "t",
-             `p.value_evenness`	= "P") |> 
-  tab_row_group(
-    label = "Sub-alpine",
-    rows = 9:16
-  ) |> 
-  tab_row_group(
-    label = "Alpine",
-    rows = 1:8
-  ) |> 
-  tab_options(
-  table.font.size = 12,
-  data_row.padding = gt::px(1))
-```
