check all models

--- a/R/model_output.qmd
+++ b/R/model_output.qmd
@@ -9,6 +9,7 @@ editor: visual
 ```{r}
 #| label: set-up
 #| echo: false
+#| warning: false
 
 library(tidyverse)
 library(performance)
@@ -16,11 +17,11 @@ library(targets)
 library(tarchetypes)
 ```
 
-
-### Annual plant productivity
+## Annual plant productivity
 
 ```{r}
 #| label: productivity-check
+#| echo: false
 #| results: asis
 
 tar_load(productivity_model)
@@ -29,18 +30,18 @@ productivity_model |>
   mutate(check = map(model, check_model)) |> 
   select(origSiteID, names, check) |> 
   pwalk(.f = function(origSiteID, names, check, ...){
-  cat(paste("##", origSiteID, names, "\n"))
+  cat(paste("##", origSiteID, "productivity - ", names, "\n"))
   print(check)
   cat("\n")
 })
   
 ```
 
-
-### Functional group cover
+## Functional group cover
 
 ```{r}
 #| label: cover-check
+#| echo: false
 #| results: asis
 
 tar_load(cover_model)
@@ -49,18 +50,18 @@ cover_model |>
   mutate(check = map(model, check_model)) |> 
   select(origSiteID, functional_group, names, check) |> 
   pwalk(.f = function(origSiteID, functional_group, names, check, ...){
-  cat(paste("##", origSiteID, functional_group, names, "\n"))
+  cat(paste("##", origSiteID, functional_group, "-", names, "\n"))
   print(check)
   cat("\n")
 })
   
 ```
 
-
-### Diversity
+## Diversity
 
 ```{r}
 #| label: diversity-check
+#| echo: false
 #| results: asis
 
 tar_load(diversity_model)
@@ -69,7 +70,92 @@ diversity_model |>
   mutate(check = map(model, check_model)) |> 
   select(origSiteID, diversity_index, names, check) |> 
   pwalk(.f = function(origSiteID, diversity_index, names, check, ...){
-  cat(paste("##", origSiteID, diversity_index, names, "\n"))
+  cat(paste("##", origSiteID, diversity_index, "-", names, "\n"))
+  print(check)
+  cat("\n")
+})
+  
+```
+
+
+
+## Climate
+
+```{r}
+#| label: climate-check
+#| echo: false
+#| results: asis
+
+tar_load(climate_model)
+
+climate_model |> 
+  mutate(check = map(model, check_model)) |> 
+  select(origSiteID, variable, names, check) |> 
+  pwalk(.f = function(origSiteID, variable, names, check, ...){
+  cat(paste("##", origSiteID, variable, "-", names, "\n"))
+  print(check)
+  cat("\n")
+})
+  
+```
+
+
+## Nutrients
+
+```{r}
+#| label: nutrient-check
+#| echo: false
+#| results: asis
+
+tar_load(nutrient_model)
+
+nutrient_model |> 
+  mutate(check = map(model, check_model)) |> 
+  select(origSiteID, elements, names, check) |> 
+  pwalk(.f = function(origSiteID, elements, names, check, ...){
+  cat(paste("##", origSiteID, elements, "-", names, "\n"))
+  print(check)
+  cat("\n")
+})
+  
+```
+
+
+## Cover - natural grazing
+
+```{r}
+#| label: cover-cn-check
+#| echo: false
+#| results: asis
+
+tar_load(cover_CN_model)
+
+cover_CN_model |> 
+  mutate(check = map(model, check_model)) |> 
+  select(origSiteID, functional_group, names, check) |> 
+  pwalk(.f = function(origSiteID, functional_group, names, check, ...){
+  cat(paste("##", origSiteID, functional_group, "-", names, "\n"))
+  print(check)
+  cat("\n")
+})
+  
+```
+
+
+## Diversity - natural grazing
+
+```{r}
+#| label: diversity-cn-check
+#| echo: false
+#| results: asis
+
+tar_load(diversity_CN_model)
+
+diversity_CN_model |> 
+  mutate(check = map(model, check_model)) |> 
+  select(origSiteID, diversity_index, names, check) |> 
+  pwalk(.f = function(origSiteID, diversity_index, names, check, ...){
+  cat(paste("##", origSiteID, diversity_index, "-", names, "\n"))
   print(check)
   cat("\n")
 })
